# aur

./: .gitmodules
aur-updater/: Cargo.toml
aur-updater/src/: main.rs
