[package]
name = "aur-updater"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
regex = "1.13.1"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "http2", "json", "rustls"] }
serde = "1.0.228"
serde_json = "1.0.150"
